[Frontend] Fix unread message preview bugfix bug
...That was one flex-shrink:0 too much.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -998,9 +998,7 @@ button.button-icon > img {
   padding-right: 0.25em;
   text-align: left;
   -webkit-align-items: baseline;
-  -webkit-flex-shrink: 0;
   align-items: baseline;
-  flex-shrink: 0;
 }
 .unread-message-line .nick, .unread-message-line .message-text {
   white-space: nowrap;
